@@ -267,6 +267,7 @@ suite("tools/windows shell assets", () => {
     assert(/Get-LatestRunIdForTargetDir/.test(panelText), "expected history latest-run fallback helper");
     assert(/Read-ReportCardSummaryForRun/.test(panelText), "expected history report-card fallback helper");
     assert(/Invoke-AdapterDoctorText/.test(panelText), "expected adapter doctor helper");
+    assert(/Copy-DoctorOutputText/.test(panelText), "expected doctor output copy helper");
     assert(/Update-HistoryDetailsBox/.test(panelText), "expected history details update helper");
     assert(/SelectedIndexChanged/.test(panelText), "expected history selection details wiring");
     assert(/Open-HistoryRunFolder/.test(panelText), "expected history open-run helper");
@@ -279,8 +280,10 @@ suite("tools/windows shell assets", () => {
     assert(/Copy Digests/.test(panelText), "expected launchpad history Copy Digests action");
     assert(/Run Adapter Doctor/.test(panelText), "expected launchpad doctor adapter action");
     assert(/Run Adapter Doctor \(Strict\)/.test(panelText), "expected launchpad doctor strict adapter action");
+    assert(/Copy Doctor Output/.test(panelText), "expected launchpad doctor copy action");
     assert(/"adapter", "doctor", "--text"/.test(panelText), "expected launchpad adapter doctor text-mode command");
     assert(/\$args \+= "--strict"/.test(panelText), "expected launchpad adapter doctor strict flag wiring");
+    assert(/Copy-DoctorOutputText -DoctorBox \$doctorText -StatusLabel \$statusLabel/.test(panelText), "expected doctor copy button/key wiring");
     assert(/Clipboard\]::SetText/.test(panelText), "expected history details clipboard copy action");
     assert(/Control -and \$e\.KeyCode -eq \[System\.Windows\.Forms\.Keys\]::C/.test(panelText), "expected history Ctrl+C copy binding");
     assert(/if \(\$e\.Shift\)\s*\{\s*Copy-HistoryDigestText/.test(panelText), "expected history Ctrl+Shift+C digest copy binding");
